k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linebot
  namespace: linebot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linebot
  template:
    metadata:
      labels:
        app: linebot
    spec:
      containers:
      - name: linebot
        image: line-bot-my-bunny-buddy_linebot:latest
        ports:
        - containerPort: 5500
