k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linebot-service
  namespace: linebot
spec:
  selector:
    app: linebot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5500
  type: ClusterIP
